welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: value ! is not a member of Int
while (k! = 6) {
        ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while (k! = 6) {
^